--- a/registry-server/package.json
+++ b/registry-server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "slackbot",
+  "name": "registry-server",
   "version": "1.0.0",
   "description": "",
   "main": "server/service.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Shashank",
+  "author": "Shashank Kaul <kaulshashank96@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "@slack/client": "^3.15.0",
