--- a/time-service/package.json
+++ b/time-service/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "slackbot-weather",
+  "name": "time-service",
   "version": "1.0.0",
   "description": "",
   "main": "server/service.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Shashank Kaul <kaulshashank96@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "superagent": "^2.3.0"
+    "express": "^4.16.2",
+    "moment": "^2.20.1",
+    "superagent": "^3.8.2"
   }
 }
